# Kratos

./: .gitignore  .gitmodules  CMakeLists.txt
applications/: CMakeLists.txt  applications_interface.py
applications/CompressiblePotentialFlowApplication/custom_elements/: compressible_potential_flow_element.h
applications/CompressiblePotentialFlowApplication/python_scripts/: compute_lift_process.py  define_wake_process.py  potential_flow_solver.py
applications/ConstitutiveModelsApplication/: constitutive_models_application.cpp  constitutive_models_application_variables.cpp  constitutive_models_application_variables.h
applications/ConstitutiveModelsApplication/custom_python/: add_custom_constitutive_laws_to_python.cpp  constitutive_models_python_application.cpp
applications/ConstitutiveModelsApplication/python_scripts/: assign_materials_process.py
applications/ContactMechanicsApplication/custom_bounding/: sphere_bounding_box.hpp
applications/ContactMechanicsApplication/custom_processes/: parametric_wall_contact_search_process.hpp
applications/ContactStructuralMechanicsApplication/: CMakeLists.txt  contact_structural_mechanics_application.cpp  contact_structural_mechanics_application_variables.cpp  contact_structural_mechanics_application_variables.h
applications/DEMApplication/: CMakeLists.txt  DEM_application_variables.h
applications/DEM_application/: CMakeLists.txt  DEM_application.cpp  DEM_application.h  DEM_application_variables.h
applications/DelaunayMeshingApplication/: CMakeLists.txt
applications/FemToDemApplication/: CMakeLists.txt  FemToDemApplication.py  fem_to_dem_application.cpp  fem_to_dem_application.h  fem_to_dem_application_variables.cpp  fem_to_dem_application_variables.h
applications/FluidDynamicsApplication/: CMakeLists.txt  fluid_dynamics_application.cpp  fluid_dynamics_application.h
applications/MeshingApplication/: CMakeLists.txt  MeshingApplication.py  README.md  meshing_application.cpp  meshing_application.h
applications/PETScApplication/: CMakeLists.txt  PETScApplication.py  license.txt  petsc_application.cpp  petsc_application.h  petsc_application_variables.cpp  petsc_application_variables.h
applications/PETScApplication/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  petsc_python_application.cpp
applications/PETScApplication/tests/: generalTests.py  test_PETScApplication.py
applications/ParticleMechanicsApplication/: CMakeLists.txt  particle_mechanics_application.cpp  particle_mechanics_application.h  particle_mechanics_application_variables.cpp  particle_mechanics_application_variables.h
applications/PfemApplication/: CMakeLists.txt  pfem_application.cpp  pfem_application_variables.cpp  pfem_application_variables.h
applications/SolidMechanicsApplication/: CMakeLists.txt
applications/StructuralMechanicsApplication/: CMakeLists.txt  structural_mechanics_application.cpp  structural_mechanics_application.h  structural_mechanics_application_variables.cpp  structural_mechanics_application_variables.h
applications/swimming_DEM_application/: CMakeLists.txt
applications/trilinos_application/: CMakeLists.txt
external_libraries/fast_poly2tri/: MPE_fastpoly2tri.h
kratos/: CMakeLists.txt
kratos/geometries/: geometry.h  line_2d_2.h  triangle_3d_3.h
kratos/includes/: amatrix_interface.h  checks.h  condition.h  constitutive_law.h  element.h  gid_mesh_container.h  mapping_variables.h  model_part.h  static_checks.h  variables.h
kratos/processes/: find_elements_neighbours_process.h  simple_mortar_mapper_process.cpp  simple_mortar_mapper_process.h
kratos/python/: add_containers_to_python.cpp  add_response_functions_to_python.cpp  add_strategies_to_python.cpp  kratos_python.cpp
kratos/python_scripts/: restart_utility.py
kratos/response_functions/: sensitivity_builder.h
kratos/sources/: variables.cpp
kratos/testing/: testing.h
kratos/tests/: test_bar_element.cpp  test_element.cpp  test_embedded_skin_mapping.py
kratos/utilities/: beam_math_utilities.hpp  binbased_fast_point_locator.h  exact_mortar_segmentation_utility.cpp  exact_mortar_segmentation_utility.h  indirect_scalar.h  indirect_scalar_fwd.h  mortar_utilities.h
(+711 files in other folders)
